# holy_c

./: .gitignore
animation/: display_screen.c
donut/: a.out  donut.c
double_pendulum/: .clangd  .gitignore  Makefile  main.c
fractal_tree/: Makefile  main.c
match3/: Makefile  meson.build
match3/include/: main.h
match3/src/: init_board.c  main.c  meson.build
nostdlib/: printf_linux.c
random_walk/: .clangd  Makefile  rw  rw.c
server/http/: server.c
server/tcp/: Makefile  client.c  docs.org  server.c
sudoku/: Makefile  puzzle.c  sudoku.c
